Bug 699633 - "Inline workers broken". r=sicking, test by Jussi Kalliokoski <jussi.kalliokoski@gmail.com>.