dom/workers/ScriptLoader.cpp
@@ -460,8 +460,7 @@ public:
     // worker's primary script.
     if (mIsWorkerScript) {
       // Take care of the base URI first.
-      rv = mWorkerPrivate->SetBaseURI(finalURI);
-      NS_ENSURE_SUCCESS(rv, rv);
+      mWorkerPrivate->SetBaseURI(finalURI);
 
       // Now to figure out which principal to give this worker.
       WorkerPrivate* parent = mWorkerPrivate->GetParent();
